Adding color for h1

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
             <meta name = "keyowrd" content = "algorithm">
             <meta name = "author" content = "Yoomin oh">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+            <style>
+              /* Each h1 is typed with brown color and upper case and aligned left*/
+              h1 {
+                text-align: left;
+                text-transform: uppercase;
+                color:brown;
+              }
+              
+
+
+            </style>
         </head>
         
         <body>
