--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 text-align: left;
                 text-transform: uppercase;
                 color:brown;
+                font-size: large;
               }
               
 
