Fixing color of h1

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
               h1 {
                 text-align: left;
                 text-transform: uppercase;
-                color:brown;
+                color:burlywood;
                 font-size: large;
               }
               
