--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <h1>Meeting Minutes</h1>
             <h2>Call to order</h2>
             <p class="ex1">A meeting of CSE101 HW group was held at </p>
-            <p class="ex0"
+            <p class="eex0">
                 <a href="https://www.google.com/maps/place/Geisel+Library/@32.881092,-117.2397546,17z/data=!3m1!4b1!4m5!3m4!1s0x80dc07853cb13045:0x2d2f19f483aaaace!8m2!3d32.8810921!4d-117.2375495">
                     <b>the Geisel Library</b>
                 </a>
