--- a/index.html
+++ b/index.html
@@ -18,6 +18,24 @@
                 border: 5px white;
                 background-color: darkgray;
               }
+              a:link {
+                color: red;
+              }
+              /* visited link */
+              a:visited {
+                color: white;
+              }
+
+              /* mouse over link */
+              a:hover {
+                color: hotpink;
+              }
+
+              /* selected link */
+              a:active {
+                color: blue;
+
+              }
 
               h1 {
                 /*1 relative unit and 1 absolute lengths */
