Updaing Pseudo-class

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               }
               /* visited link */
               a:visited {
-                color: white;
+                color: black;
               }
 
               /* mouse over link */
