Updaing Pseudo-class

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
               h1 {
                 /*1 relative unit and 1 absolute lengths */
-                position: fixed;
+                position: static;
                 text-align: left;
                 text-transform: uppercase;
                 color:burlywood;
