--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               
               /* visited link */
               a:visited {
-                color: black;
+                color: rgb(0, 0, 0);
               }
 
               /* mouse over link */
@@ -37,7 +37,7 @@
 
               h1 {
                 /*1 relative unit and 1 absolute lengths */
-                position: static;
+                position: relative;
                 text-align: left;
                 text-transform: uppercase;
                 color:burlywood;
