--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 padding-left: 10px;
                 border: 3px solid blueviolet;
                 text-align: justify;
-                font-family: Lucida handwriting, cursive
+                font-family: Lucida handwriting, cursive;
                 text-indent: 50px;
               }
               
