--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
             <style>
-
+            /* Each h1 is typed with brown color and upper case and aligned left*/
               h1 {
                 /*1 relative unit and 1 absolute lengths */
                 position: relative;
