Updaing html to resolve conflict

--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
             <style>
               /* Each h1 is typed with brown color and upper case and aligned left*/
               h1 {
+                /*1 relative unit and 1 absolute lengths */
+                position: relative;
                 text-align: left;
                 text-transform: uppercase;
                 color:burlywood;
+                font-size: "1in";
+                line-height: "2ch";
+                text-align: center;
+                font-family: "Lucida Console", monospace;
               }
-              
 
 
             </style>
